# ConanWSL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  conan_init.py
src1/: CMakeLists.txt  main.cpp
